--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -21,8 +21,8 @@
     <h1>Olá, mundo!</h1>
     <p>Ja me livrei da maldição!!</p>
 <script>
-    window.alert('Minha primeira mensagem!')
-    window.confirm('Esta gostando de JS?')
+   /* window.alert('Minha primeira mensagem!')
+    window.confirm('Esta gostando de JS?') */
     window.prompt('Qual é seu nome?')
 </script>
 </body>
