--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -21,9 +21,9 @@
     <h1>Olá, mundo!</h1>
     <p>Ja me livrei da maldição!!</p>
 <script>
-   /* window.alert('Minha primeira mensagem!')
-    window.confirm('Esta gostando de JS?') */
-    window.prompt('Qual é seu nome?')
+    window.alert('Minha primeira mensagem!') 
+    window.confirm('Esta gostando de JS?') // Janela com botão ok e canelar
+    window.prompt('Qual é seu nome?') // Vai perguntar o nome...
 </script>
 </body>
 </html>
